--- a/0x03 权限提升/Linux/配置不当提权/shell脚本提权/定时任务提权.md
+++ b/0x03 权限提升/Linux/配置不当提权/shell脚本提权/定时任务提权.md
@@ -16,9 +16,11 @@ root账户定时检查aplyc1a家目录下的文件是否被篡改。
 
 ```text
 echo '#!/bin/bash' >> ~aplyc1a/escal/.hourlychk.sh
-echo "find ~aplyc1a -user root -type f -exec md5sum {}\;"
-chmod 744 ~aplyc1a/.escal/hourlychk.sh
+echo "find ~aplyc1a -user root -type f -exec md5sum {}\; >> /var/log/.hourly_chk.log"
+chmod 744 ~aplyc1a/escal/.hourlychk.sh
 echo "* */1 * * * root /home/aplyc1a/escal/.hourlychk.sh" >> /etc/crontab
+systemctl enable crond
+systemctl start crond
 ```
 
 # 攻击实施
