--- a/0x03 权限提升/Linux/配置不当提权/shell脚本提权/调用权限继承提权.md
+++ b/0x03 权限提升/Linux/配置不当提权/shell脚本提权/调用权限继承提权.md
@@ -24,7 +24,7 @@ root用户将本脚本放到了定时任务或/etc/profile中。
 aplyc1a家目录下有1脚本：
 
 ```shell
-aplyc1a: echo "find ~aplyc1a -user root -type f -exec md5sum {}\;" >> ~aplyc1a/escal/.hourlychk.sh
+aplyc1a: echo "find ~aplyc1a -user root -type f -exec md5sum {} \; >> /varlog/hourly_ck.log " >> ~aplyc1a/escal/.hourlychk.sh
 aplyc1a: chmod +x ~aplyc1a/escal/.hourlychk.sh
 ```
 
