--- a/0x03 权限提升/Linux/配置不当提权/shell脚本提权/软链接提权.md
+++ b/0x03 权限提升/Linux/配置不当提权/shell脚本提权/软链接提权.md
@@ -9,7 +9,7 @@
 root用户创建了以下下脚本
 
 ```shell
-nano 1.sh <<EOF
+tee 1.sh <<EOF
 #!/bin/bash
 chown root:root ./2.sh
 EOF
@@ -39,7 +39,7 @@ bash 1.sh
 root用户创建了以下下脚本
 
 ```shell
-cat 1.sh <<EOF
+tee 1.sh <<EOF
 #!/bin/bash
 chown aplyc1a:aplyc1a ./2.sh
 EOF
